--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 12 20:37:08 EDT 2017
-sdk.dir=/Users/dianamilton/Library/Android/sdk
+#Tue Mar 28 13:11:05 EDT 2017
+sdk.dir=C\:\\Users\\Nilay Mehta\\AppData\\Local\\Android\\Sdk
