--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 28 13:11:05 EDT 2017
-sdk.dir=C\:\\Users\\Nilay Mehta\\AppData\\Local\\Android\\Sdk
+#Sat Apr 08 15:53:47 EDT 2017
+sdk.dir=/Users/dianamilton/Library/Android/sdk
