--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 repositories {
     maven { url "https://jitpack.io" }
+    mavenCentral()
 }
 
 dependencies {
@@ -43,6 +44,7 @@ dependencies {
 dependencies {
     compile 'com.google.android.gms:play-services-maps:9.0.0'
     compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
@@ -60,11 +62,16 @@ dependencies {
 
 }
 dependencies {
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-auth:9.0.0'
 }
 dependencies {
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-database:9.0.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.android.support:recyclerview-v7:25.2.0'
 
+}
+
+
+dependencies {
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
