--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -29,6 +39,7 @@ android {
 repositories {
     maven { url "https://jitpack.io" }
     mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -39,6 +50,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.2'
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
+    compile('com.twitter.sdk.android:twitter:2.3.2@aar') {
+        transitive = true;
+    }
 }
 
 dependencies {
@@ -74,4 +88,5 @@ dependencies {
 
 dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.android.gms:play-services-appindexing:9.0.0'
 }
